---------------------------------------------------------------------------------------------------
Version: 3.0.23
Date: ????
  Changes:
    - Added a module slot to the retorter
    - Fixed iron stick recipe having unlocks in techs even though it's unlocked from the start. Resolves https://github.com/pyanodon/pybugreports/issues/1356
---------------------------------------------------------------------------------------------------
Version: 3.0.22
Date: 2025-12-28
  Changes:
    - Fixed some techs having a too-fast cycle time
    - Added Spanish locale courtesy of @rubysunflower on Discord
    - Increased the output fluidbox size of all buildings from 100->1000. Allows fluid transfer at even higher rates before hitting engine limitations. Resolves https://github.com/pyanodon/pybugreports/issues/1203
    - Fixed all techs added by "enable all feature flags" not being seen by autotech.
    - Fixed hot air stage 1 not requiring coke processing stage 1. Resolves https://github.com/pyanodon/pybugreports/issues/1261
    - Fixed hot air stage 3 not requiring coke processing stage 3. Resolves https://github.com/pyanodon/pybugreports/issues/1251
---------------------------------------------------------------------------------------------------
Version: 3.0.21
Date: 2025-09-15
  Changes:
    - Remade tech tree with autotech 2.0. Science pack cost comparasion:
    - automation: n/a -> trigger
    - py1: 100 -> 100
    - logi: 360 -> 300
    - py2: 1300 -> 800
    - chem: 2000 -> 1400
    - py3: 2250 -> 1750
    - prod: 1750 -> 2250
    - py4: 2250 -> 3000
    - utility: 1500 -> 3300
    - space: 1000 -> 3600
    - phyrric: 3000 -> 8000
    - Anthracene + Hydrogen -> Gasoline recipe can no longer be used in automation science.
    - Ironic upgrader MK01 unlock moved to oil machines MK01 (previously was in syngas technology).
    - Added Dutch locale